src/test/ui/const-generics/lazy-normalization/lazy-normalization-feature-gate.stderr
warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/lazy-normalization-feature-gate.rs:2:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error[E0391]: cycle detected when const-evaluating + checking `<impl at $DIR/lazy-normalization-feature-gate.rs:6:1: 6:72>::{{constant}}#0`
  --> $DIR/lazy-normalization-feature-gate.rs:6:58
   |
LL | impl<const N: usize> Foo for [(); N] where Self: FooImpl<{ N == 0 }> {}
   |                                                          ^^^^^^^^^^
   |
note: ...which requires const-evaluating + checking `<impl at $DIR/lazy-normalization-feature-gate.rs:6:1: 6:72>::{{constant}}#0`...
  --> $DIR/lazy-normalization-feature-gate.rs:6:58
   |
LL | impl<const N: usize> Foo for [(); N] where Self: FooImpl<{ N == 0 }> {}
   |                                                          ^^^^^^^^^^
note: ...which requires const-evaluating `<impl at $DIR/lazy-normalization-feature-gate.rs:6:1: 6:72>::{{constant}}#0`...
  --> $DIR/lazy-normalization-feature-gate.rs:6:58
   |
LL | impl<const N: usize> Foo for [(); N] where Self: FooImpl<{ N == 0 }> {}
   |                                                          ^^^^^^^^^^
note: ...which requires type-checking `<impl at $DIR/lazy-normalization-feature-gate.rs:6:1: 6:72>::{{constant}}#0`...
  --> $DIR/lazy-normalization-feature-gate.rs:6:58
   |
LL | impl<const N: usize> Foo for [(); N] where Self: FooImpl<{ N == 0 }> {}
   |                                                          ^^^^^^^^^^
note: ...which requires processing `<impl at $DIR/lazy-normalization-feature-gate.rs:6:1: 6:72>::{{constant}}#0`...
  --> $DIR/lazy-normalization-feature-gate.rs:6:58
   |
LL | impl<const N: usize> Foo for [(); N] where Self: FooImpl<{ N == 0 }> {}
   |                                                          ^^^^^^^^^^
   = note: ...which again requires const-evaluating + checking `<impl at $DIR/lazy-normalization-feature-gate.rs:6:1: 6:72>::{{constant}}#0`, completing the cycle
note: cycle used when processing `<impl at $DIR/lazy-normalization-feature-gate.rs:6:1: 6:72>`
  --> $DIR/lazy-normalization-feature-gate.rs:6:1
   |
LL | impl<const N: usize> Foo for [(); N] where Self: FooImpl<{ N == 0 }> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0391`.
